# HiSTAV

./: Dockerfile  HowTo  LICENSE  README.md  gitignore.py
mesh/: CMakeLists.txt
mesh/code/: mesh.cpp
mesh/code/headers/: common.hpp  meshBoundary.hpp  meshControl.hpp  meshEntities.hpp  meshGen.hpp  meshGlobals.hpp  meshInterpolation.hpp  meshOrder.hpp  meshRead.hpp
mesh/code/sources/: common.cpp  meshBoundary.cpp  meshControl.cpp  meshEntities.cpp  meshGen.cpp  meshGlobals.cpp  meshInterpolation.cpp  meshOrder.cpp  meshOutput.cpp  meshRead.cpp
solver2D/: CMakeLists.txt
solver2D/code/: Solver2D_vALL.cpp  Solver2D_vALL.hpp  Solver2D_vCUDA.cpp  Solver2D_vCUDA.hpp  Solver2D_vMPI.cpp  Solver2D_vMPI.hpp  Solver2D_vOMP.cpp  Solver2D_vOMP.hpp
solver2D/code/headers/: boundaries.hpp  common.hpp  compile.hpp  control.hpp  forcing.hpp  geometry.hpp  gpuIO.hpp  gpuRun.hpp  mesh.hpp  mpiIO.hpp  mpiRun.hpp  numerics.hpp  output.hpp  sediment.hpp
solver2D/code/sources/: boundaries.cpp  common.cpp  control.cpp  forcing.cpp  geometry.cpp  gpuIO.cpp  gpuRun.cpp  initial.cpp  lagrangian.cpp  mesh.cpp  mpiIO.cpp  mpiRun.cpp  numerics.cpp  output.cpp  sediment.cpp  simulation.cpp
src/mesh/: mesh.cpp
src/mesh/headers/: common.hpp  meshBoundary.hpp  meshControl.hpp  meshEntities.hpp  meshGen.hpp  meshGlobals.hpp  meshInterpolation.hpp  meshOrder.hpp  meshRead.hpp
src/mesh/sources/: common.cpp  meshBoundary.cpp  meshControl.cpp  meshEntities.cpp  meshGen.cpp  meshGlobals.cpp  meshInterpolation.cpp  meshOrder.cpp  meshOutput.cpp  meshRead.cpp
src/pyMesh/: meshRun.py
src/pyMesh/meshGIS/: layerSHP.py  layerTIFF.py  meshSHP.py  meshTIFF.py
src/pyMesh/meshStruct/: edge2D.py  facet2D.py  mesh2D.py  node2D.py
src/pyMesh/meshStruct/geometry/: point2D.py
src/solver2D/: Solver2D_vALL.cpp  Solver2D_vALL.hpp  Solver2D_vAll.cpp  Solver2D_vCUDA.cpp  Solver2D_vCUDA.hpp  Solver2D_vMPI.cpp  Solver2D_vMPI.hpp  Solver2D_vOMP.cpp  Solver2D_vOMP.hpp
src/solver2D/headers/: boundaries.hpp  common.hpp  compile.hpp  control.hpp  forcing.hpp  friction.hpp  geometry.hpp  gpuRun.hpp  lagrangian.hpp  mesh.hpp  mpiIO.hpp  mpiRun.hpp  numerics.hpp  sediment.hpp  simulation.hpp
src/solver2D/sources/: boundaries.cpp  common.cpp  control.cpp  forcing.cpp  friction.cpp  geometry.cpp  gpuIO.cpp  gpuRun.cpp  initial.cpp  mesh.cpp  mpiIO.cpp  mpiRun.cpp  numerics.cpp  output.cpp  sediment.cpp  simulation.cpp
